[build] - transfer wordpress to jekyll

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,32 +5,63 @@
 <!--[if gt IE 8]><!--> <html> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-    <meta name="description" content="">
+    <title>{{ page.title }} | Tom Hopcraft</title>
+
+    <meta name="description" content="Tom Hopcraft a web designer and front-end developer from the Midlands Uk. A recent BA Interactive Media graduate from Nottingham Trent University specialising in clean design and code with a hint of Responsive Web Design." />
+    <meta name="keywords" content="web design, ntu, multimedia, interactive media, tom hopcraft, chewx, graphic design, nottingham, daventry, freelance, chewx, rwd, responsive, responsive web design"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="{{base.url}}/assets/css/scss/main.css">
     <!--[if lt IE 9]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
 </head>
 <body>
 
-    <header class="l-header">
-        <h1>{{ site.name }}</h1>
-    </header>
+    <header class="l-header"></header>
 
-    <main class="l-main">
-        {{ content }}
-    </main>
+    <div class="inner-container">
 
-    <footer class="l-footer">
+        <aside class="l-sidebar">
 
+            <a href="/"><img class="logo" src="{{base.url}}/assets/img/logo.jpg" alt="Tom Hopcraft Logo" /></a>
+            <nav class="l-sidebar__nav">
+                <ul class="bare-list">
+                    <li><a href="/about.html">about</a></li>
+                    <li><a href="/websites.html">web</a></li>
+                    <li><a href="/contact.html">contact</a></li>
+                    <li><a href="/blog.html">blog</a></li>
+                    <li><a href="http://www.admirecreative.co.uk" target="_blank">hire</a></li>
+                </ul>
+            </nav>
 
-    </footer>
+        </aside>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+        <main class="l-main">
+            {{ content }}
+        </main>
+
+    </div>
+
+    <footer class="l-footer"></footer>
+
+    <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{base.url}}/assets/js/jquery-1.10.1.min.js"><\/script>')</script>
 
-        <script src="{{base.url}}/assets/js/src/global.js"></script>
-        <!--<script src="assets/js/main.min.js"></script>-->
+    <script src="{{base.url}}/assets/js/src/global.js"></script>
+    <script src="assets/js/main.min.js"></script>-->
+
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-19652170-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
 
 </body>
 </html>
