--- a/assets/css/scss/layout/_grid.scss
+++ b/assets/css/scss/layout/_grid.scss
@@ -1,8 +1,8 @@
 // 12 Column fluid and responsive grid
 
 .inner-container {
-    max-width:1140px;
-    padding:0px 3.50877192982456%; /*40/1140*/
+    width:960px;
+    padding-top:190px;
     margin:0px auto;
     -moz-box-sizing: content-box!important;
     -webkit-box-sizing: content-box!important;
