--- a/assets/css/scss/layout/_layout.scss
+++ b/assets/css/scss/layout/_layout.scss
@@ -1,10 +1,56 @@
 // Main layout styles go here
 
 .l-header {
-
+	left:0;
+	overflow:hidden;
+	position:fixed;
+	top:0;
+	width:100%;
+	z-index:1000;
+	height:100px;
+	background-color:#FFFFFF;
+	opacity:0.9;
+	border-bottom: 1px dotted #000;
 }
 .l-footer {
 
+}
+.l-main {
+	float:right;
+	width:675px;
+	margin-bottom:40px;
+}
+.l-sidebar {
+	float:left;
+	position:fixed;
+	width:195px;
+}
+.l-sidebar__nav {
+
+	margin-top:90px;
+	width:195px;
+
+	ul li {
+
+		border-top: 1px dotted #000;
+		padding:10px 0px 10px 0px;
+			line-height:18px;
+
+		a {
+			text-decoration:none;
+			color:#333;
+			font-size:18px;
+			text-transform:uppercase;
+
+			&:hover {
+				text-decoration:underline;
+			}
+
+		}
+		&:last-child {
+			border-bottom: 1px dotted #000;
+		}
+	}
 }
 
 
