--- a/assets/css/scss/layout/_responsive.scss
+++ b/assets/css/scss/layout/_responsive.scss
@@ -11,3 +11,134 @@
 		overflow-x:hidden;
 	}
 }
+
+@media only screen and (min-width: 715px) and (max-width: 1023px) {
+
+	.inner-container {
+		padding-top:40px;
+		width:675px;
+	}
+
+	.l-sidebar {
+		width:675px;
+		float:none;
+		text-align:center;
+		position:relative;
+	}
+
+	.l-main {
+		float:none;
+	}
+
+	.l-header {
+		display:none;
+	}
+
+	.l-sidebar__nav{
+		margin:45px 0px;
+		width:100%;
+
+		ul li{
+			display:inline;
+			border-top: 1px dotted #000;
+			border-bottom: 1px dotted #000;
+			padding:10px 0px 10px 0px;
+			margin:0px 20px;
+		}
+	}
+
+	.l-sidebar .logo{
+		 display: block;
+		 margin-left: auto;
+		 margin-right: auto;
+	}
+
+}
+
+@media only screen and (max-height:750px) {
+
+	.inner-container {
+		padding-top:125px;
+	}
+}
+
+@media only screen and (max-width: 714px) {
+
+	.inner-container {
+		width:94.5378151260504%; /* 675 / 714 */
+		margin:40px 0px 0px 2.8011204481793%;
+		padding:0px;
+	}
+
+	.l-sidebar {
+		float:none;
+		width:100%;
+		text-align:center;
+		position:relative;
+	}
+
+	.l-main {
+		float:none;
+		width:100%;
+	}
+
+	.l-header {
+		display:none;
+	}
+
+	.l-sidebar__nav {
+		margin:45px 0px;
+		width:100%;
+
+		ul li{
+			display:inline;
+			border-top: 1px dotted #000;
+			border-bottom: 1px dotted #000;
+			padding:10px 0px 10px 0px;
+			margin:0px 2.962962962963%; /* 20 / 675 */
+		}
+	}
+
+	.l-sidebar .logo{
+		 display: block;
+		 margin-left: auto;
+		 margin-right: auto;
+	}
+
+	.object img,
+	.welcome{
+		max-width:100%;
+		width:100%;
+	}
+
+	.social img{
+		margin-right:4.4444444444444%; /* 30 / 675 */
+	}
+
+	.infomain {
+		p.text{
+			width:100%;
+		}
+	}
+
+	.object{
+		margin-bottom:26.6666666666667%; /* 180 / 675 */
+	}
+}
+
+@media only screen and (max-width: 504px) {
+
+	.l-sidebar__nav {
+		ul li{
+			display:block;
+			border-top: 1px dotted #000;
+			border-bottom:0px;
+			padding:10px 0px 10px 0px;
+			margin:0px 2.962962962963%; /* 20 / 675 */
+
+			&:last-child {
+				border-bottom: 1px dotted #000;
+			}
+		}
+	}
+}
