[meta] - meta data changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <title>{{ page.title }} | Tom Hopcraft</title>
 
-    <meta name="description" content="Tom Hopcraft a web designer and front-end developer from the Midlands Uk. A recent BA Interactive Media graduate from Nottingham Trent University specialising in clean design and code with a hint of Responsive Web Design." />
-    <meta name="keywords" content="web design, ntu, multimedia, interactive media, tom hopcraft, chewx, graphic design, nottingham, daventry, freelance, chewx, rwd, responsive, responsive web design"/>
+    <meta name="description" content="Tom Hopcraft is a web designer and front-end developer from Northampton UK. A BA Interactive Media graduate from Nottingham Trent University specialising in Responsive Web Design and Wordpress." />
+    <meta name="keywords" content="web design, ntu, multimedia, wordpress, interactive media, tom hopcraft, chewx, graphic design, nottingham, daventry, freelance, chewx, rwd, responsive, responsive web design"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="{{base.url}}/assets/css/scss/main.css">
