[blog] - add disqus comments to blog

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,8 @@ layout: default
         </footer>
     </div>
 </article>
-<!-- @TODO include discus here -->
+
+{% include disqus.html %}
 
 <!-- @TODO
 <div class="pagination">
