[fav] - add favicon and apple-touch-icon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,9 @@
     <meta name="keywords" content="web design, ntu, multimedia, wordpress, interactive media, tom hopcraft, chewx, graphic design, nottingham, daventry, freelance, chewx, rwd, responsive, responsive web design"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="icon" type="image/png" href="{{base.url}}/assets/img/favicon.ico">
+    <link rel="apple-touch-icon" href="{{base.url}}/assets/img/apple-touch-icon.jpg">
+
     <link rel="stylesheet" href="{{base.url}}/assets/css/scss/main.css">
     <!--[if lt IE 9]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
 </head>
