[tweak] - general title tag changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,11 +28,11 @@
             <a href="/"><img class="logo" src="{{base.url}}/assets/img/logo.jpg" alt="Tom Hopcraft Logo" /></a>
             <nav class="l-sidebar__nav">
                 <ul class="bare-list">
-                    <li><a href="/about.html">about</a></li>
-                    <li><a href="/websites.html">web</a></li>
-                    <li><a href="/contact.html">contact</a></li>
-                    <li><a href="/blog.html">blog</a></li>
-                    <li><a href="http://www.admirecreative.co.uk" target="_blank">hire</a></li>
+                    <li><a href="/about.html" title="About Tom Hopcraft">about</a></li>
+                    <li><a href="/websites.html" title="Web Design">web</a></li>
+                    <li><a href="/blog.html" title="blog">blog</a></li>
+                    <li><a href="/contact.html" title="Contact Tom Hopcraft">contact</a></li>
+                    <li><a href="http://www.admirecreative.co.uk" target="_blank" title="Hire Tom Hopcraft">hire</a></li>
                 </ul>
             </nav>
 
