--- a/assets/css/scss/base/_variables.scss
+++ b/assets/css/scss/base/_variables.scss
@@ -32,7 +32,7 @@ $light-grey:   #ededed;
 $black:  #000;
 
 // Color variables
-$primary-color: $grey;
+$primary-color: $black;
 $secondary-color: #233E5B;
 $tertiary-color: #aaa;
 
