--- a/assets/css/scss/layout/_site.scss
+++ b/assets/css/scss/layout/_site.scss
@@ -2,8 +2,8 @@
 
 .infomain{
 
-	margin-top:50px;
-	border-bottom: 1px dotted #000;
+	margin-top: 50px;
+	border-bottom: 1px dotted $primary-color;
 
 	p.text{
 		padding:20px 0px 40px 0px;
@@ -25,7 +25,7 @@
 .social {
 	a {
 		border-radius: 40px;
-		background: $grey;
+		background: $primary-color;
 		width:40px;
 		height:40px;
 		margin-right:40px;
@@ -37,7 +37,7 @@
 		color: $white;
 
 		&:hover {
-			background: $light-grey;
+			background: lighten($primary-color, 15);
 		}
 	}
 
