--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -6,9 +6,7 @@
 // Reset using Normalize
 @import "base/reset";
 
-// Import Open Sans font from Google
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
-@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+@import url(http://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic);
 
 // Set variables and reusable mixins
 @import "base/variables";
