[contact] - add former form and style tweaks

--- a/assets/css/scss/layout/_site.scss
+++ b/assets/css/scss/layout/_site.scss
@@ -62,6 +62,8 @@ main.infotext {
 	padding: 30px 0;
 }
 .social {
+	margin-bottom: 40px;
+
 	a {
 		border-radius: 40px;
 		background: $primary-color;
