[link] - update hire link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
                     <li><a href="/websites.html" title="Web Design">web</a></li>
                     <li><a href="/blog.html" title="blog">blog</a></li>
                     <li><a href="/contact.html" title="Contact Tom Hopcraft">contact</a></li>
-                    <li><a href="http://www.admirecreative.co.uk" target="_blank" title="Hire Tom Hopcraft">hire</a></li>
+                    <li><a href="http://www.admire.agency/" target="_blank" title="Freelance Developer">hire</a></li>
                 </ul>
             </nav>
 
