--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,10 @@
             <a href="/"><img class="logo" src="{{base.url}}/assets/img/logo.jpg" alt="Tom Hopcraft Logo" /></a>
             <nav class="l-sidebar__nav">
                 <ul class="bare-list">
-                    <li><a href="/about.html" title="About Tom Hopcraft">about</a></li>
-                    <li><a href="/websites.html" title="Web Design">web</a></li>
-                    <li><a href="/blog.html" title="blog">blog</a></li>
-                    <li><a href="/contact.html" title="Contact Tom Hopcraft">contact</a></li>
+                    <li><a href="/about/" title="About Tom Hopcraft">about</a></li>
+                    <li><a href="/websites/" title="Web Design">web</a></li>
+                    <li><a href="/blog/" title="blog">blog</a></li>
+                    <li><a href="/contact/" title="Contact Tom Hopcraft">contact</a></li>
                     <li><a href="http://www.admire.agency/" target="_blank" title="Freelance Developer">hire</a></li>
                 </ul>
             </nav>
