--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -6,7 +6,7 @@
 // Reset using Normalize
 @import "base/reset";
 
-@import url(http://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic);
+@import url(https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic);
 
 // Set variables and reusable mixins
 @import "base/variables";
