[css] - force cache clear

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <link rel="icon" type="image/png" href="{{base.url}}/assets/img/favicon.ico">
     <link rel="apple-touch-icon" href="{{base.url}}/assets/img/apple-touch-icon.jpg">
 
-    <link rel="stylesheet" href="{{base.url}}/assets/css/scss/main.css">
+    <link rel="stylesheet" href="{{base.url}}/assets/css/scss/main.css?v=2.5">
     <!--[if lt IE 9]>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.js"></script>
     <![endif]-->
