--- a/assets/css/scss/modules/_links.scss
+++ b/assets/css/scss/modules/_links.scss
@@ -7,15 +7,15 @@
     ========================================================================== */
 
 a {
-	// color: $primary-color;
-    color: $c-black;
+    color: $c-white;
     text-decoration: none;
     position: relative;
-    mix-blend-mode: exclusion;
+    padding-left: 5px;
+    padding-right: 5px;
 
     &:after {
         content: '';
-        height: .3vw;
+        height: 100%;
         width: 100%;
         background: red;
         position: absolute;
@@ -24,6 +24,10 @@ a {
         right: 0;
         z-index: -1;
         transition: height ease 150ms;
+
+        @include breakpoint( xlarge ) {
+            height: .3vw;
+        }
     }
 
 	&:hover,
