--- a/assets/css/scss/layout/_footer.scss
+++ b/assets/css/scss/layout/_footer.scss
@@ -7,5 +7,17 @@
     ========================================================================== */
 
 .l-footer {
+    margin: $padding / 2;
 
+    @include breakpoint( medium ) {
+        margin: $padding;
+    }
+
+    @include breakpoint( xlarge ) {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        text-align: right;
+    }
 }
