--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 <body>
 
     <div class="video-container">
-        <video width="320" height="240" autoplay mute loop>
+        <video width="320" height="240" autoplay mute loop playsinline>
             <source src="{{base.url}}/assets/video/high-six.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
