[theme] - inverted and made autumnal

--- a/assets/css/scss/base/_variables.scss
+++ b/assets/css/scss/base/_variables.scss
@@ -65,6 +65,8 @@ $c-info: $c-blue; // Good color for success etc.
 $c-warning: $c-orange; // Good color for success etc.
 $c-subtle: $c-grey; // Subtle color for subtle text
 
+$c-highlight: #4daf7c;
+
 /*
     Colour Maps
     ========================================================================== */
