--- a/assets/css/scss/base/_type.scss
+++ b/assets/css/scss/base/_type.scss
@@ -18,6 +18,8 @@ body {
 	font-weight: 400;
 	font-style: normal;
 	line-height: 1.4;
+    color: #f1f1f1;
+    background-color: #010101;
 
     @include breakpoint( xxlarge ) {
         font-size: calc( 1em + 1.7vw );
