[misc] - remove video hover and tweak meta data

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,8 @@
     <link rel="dns-prefetch" href="//www.google-analytics.com">
     <link rel="dns-prefetch" href="//fast.fonts.net">-->
 
-    <meta name="description" content="Tom Hopcraft is a web designer and front-end developer from Northampton UK. A BA Interactive Media graduate from Nottingham Trent University specialising in Responsive Web Design and Wordpress." />
-    <meta name="keywords" content="web design, ntu, multimedia, wordpress, interactive media, tom hopcraft, chewx, graphic design, nottingham, daventry, freelance, chewx, rwd, responsive, responsive web design"/>
+    <meta name="description" content="Freelance Developer from Northampton, UK. Specialist in WordPress development." />
+    <meta name="keywords" content="web design, ntu, multimedia, wordpress, interactive media, tom hopcraft, chewx, graphic design, nottingham, freelance, chewx, rwd, responsive, responsive web design"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -27,13 +27,6 @@
 </head>
 <body>
 
-    <div class="video-container">
-        <video width="320" height="240" autoplay mute loop playsinline>
-            <source src="{{base.url}}/assets/video/high-six.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </div>
-
     <div class="wrapper">
         <header class="l-header">
             Tom Hopcraft
@@ -47,34 +40,6 @@
             <a href="mailto:tom@admire.agency">Email</a> / <a href="http://www.twitter.com/chewx" target="_blank">Tweet</a>
         </footer>
     </div>
-
-    <script type="text/javascript">
-
-        var $body = document.getElementsByTagName( 'body' )[0];
-        var $six_trigger = document.getElementsByClassName( 'js-six-trigger' )[0];
-        var six_video_active_class = 'show-video';
-
-        $six_trigger.onmouseover = function(){
-
-            $body.classList.add( six_video_active_class );
-        }
-
-        $six_trigger.onmouseout = function(){
-
-            $body.classList.remove( six_video_active_class );
-        }
-
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-19652170-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function() {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
-
-    </script>
 
 </body>
 </html>
