--- a/assets/css/scss/base/_variables.scss
+++ b/assets/css/scss/base/_variables.scss
@@ -65,7 +65,7 @@ $c-info: $c-blue; // Good color for success etc.
 $c-warning: $c-orange; // Good color for success etc.
 $c-subtle: $c-grey; // Subtle color for subtle text
 
-$c-highlight: #4daf7c;
+$c-highlight: #666;
 
 /*
     Colour Maps
