--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <title>{{ page.title }} | Tom Hopcraft</title>
+    <title>{{ page.title }} — Tom Hopcraft</title>
 
     <!--<link rel="dns-prefetch" href="//ajax.googleapis.com">
     <link rel="dns-prefetch" href="//www.google-analytics.com">
